<resources>
    <string name="app_name">Productos Frescos</string>

    <string name="navigation_drawer_open">Abrir navigacion</string>
    <string name="navigation_drawer_close">Cerrar navigacion</string>

    <string name="action_settings">Configuracion</string>

    <string name="str_login_usuario">Nombre Usuario:</string>
    <string name="str_login_password">Contraseña:</string>
    <string name="str_login_ingresar">Ingresar</string>

    <string name="menu_clientes">Administracion de Clientes</string>
    <string name="menu_pedidos">Entrega de pedidos</string>
    <string name="menu_productos">Listar productos</string>
    <string name="menu_resumen">Resumen de caja</string>
    <string name="menu_map">Ver Ruta</string>

    <string name="title_fragment_clientes">Clientes</string>
    <string name="title_fragment_details_cliente">Detalle Cliente</string>

    <string name="title_fragment_pedidos">Pedidos</string>
    <string name="title_fragment_productos">Productos</string>
    <string name="title_fragment_resumen">Resumen de caja</string>
    <string name="title_fragment_map">Ver Ruta</string>

    <string name="title_activity_maps">Mapa</string>

    <string name="fragment_productos_empty">Sin productos</string>
    <string name="fragment_clientes_empty">Sin clientes</string>

    <string name="add_cliente">Agregar Cliente</string>
    <string name="update_cliente">Modificar Cliente</string>
    <string name="delete_cliente">Eliminar Cliente</string>

    <string name="nombre_cliente">Nombre</string>
    <string name="direccion_cliente">Direccion</string>
    <string name="telefono_cliente">Telefono</string>
    <string name="latitud_cliente">Latitud</string>
    <string name="longuitud_cliente">Longuitud</string>

    <string name="add_producto">Agregar Producto</string>
    <string name="update_producto">Modificar Producto</string>

    <string name="add_pedido">Agregar Pedido</string>
    <string name="update_pedido">Modificar Pedido</string>
    <string name="delete_pedido">Eliminar Pedido</string>

    <string name="str_pedido_cliente">Cliente</string>
    <string name="str_pedido_fecha">Fecha de Entrega</string>
    <string name="str_pedido_entregado">Entregado</string>
    <string name="str_pedido_add_detalle">Agregar Detalle</string>
    <string name="str_pedido_detalles">Detalles</string>
    <string name="str_pedido_producto">Producto</string>
    <string name="str_pedido_cantidad">Cantidad</string>
    <string name="str_pedido_precio">Precio Unitario</string>
    <string name="str_pedido_total">Total</string>

    <string name="str_resumen_total_entregas">Total Entregas</string>
    <string name="str_resumen_total_pedidos">Total Pedidos</string>
    <string name="str_resumen_saldo">Saldo</string>

    <string name="update">Guardar</string>
    <string name="add">Agregar</string>
    <string name="reset">Limpiar</string>
    <string name="cancel">Cancelar</string>

    <string name="no_pedidos_pendientes">No hay clientes con pedidos pendientes</string>
    <string name="menu_settings">Configuraciones</string>

    <string name="hello_blank_fragment">Hola mundo</string>
    <string name="pref_title_idioma">Idioma</string>

    <string name="cliente_null">No se encuentra informacion de cliente</string>
    <string name="cliente_nombre_requerido">Debe ingresar nombre</string>
    <string name="cliente_direccion_requerido">Debe ingresar direccion</string>
    <string name="cliente_telefono_requerido">Debe ingresar telefono</string>
    <string name="cliente_latitud_requerido">Debe ingresar latitud</string>
    <string name="cliente_longuitud_requerido">Debe ingresar longuitud</string>
    <string name="cliente_agregar">Esta seguro de agregar este cliente?</string>
    <string name="cliente_modificar">Esta seguro de modificar este cliente?</string>
    <string name="cliente_eliminar">Esta seguro de eliminar este cliente?</string>
    <string name="cliente_agregar_ok">Cliente agregado correctamente</string>
    <string name="cliente_modificar_ok">Cliente modificado correctamente</string>

    <string name="usuario_null">No se encuentra informacion de vendedor</string>

    <string name="pedido_null">No se encuentra informacion de pedido</string>
    <string name="pedido_fecha_requerido">Debe ingresar fecha</string>
    <string name="pedido_agregar">Esta seguro de agregar este pedido?</string>
    <string name="pedido_modificar">Esta seguro de modificar este pedido?</string>
    <string name="pedido_eliminar">Esta seguro de eliminar este pedido?</string>
    <string name="pedido_agregar_ok">Pedido agregado correctamente</string>
    <string name="pedido_modificar_ok">Pedido modificado correctamente</string>

    <string name="pedido_entregado">Entregado</string>
    <string name="pedido_pendiente">Pendiente</string>

    <string name="pedido_detalle_agregar">Esta seguro de agregar este detalle?</string>
    <string name="pedido_detalle_cantidad_requerido">Debe ingresar cantidad</string>
    <string name="pedido_detalle_precio_requerido">Debe ingresar precio</string>

    <string name="login_username_requerido">Debe ingresar un nombre de usuario</string>
    <string name="login_password_requerido">Debe ingresar contraseña</string>
    <string name="login_ok">Usuario correcto</string>
    <string name="login_error">Usuario y/o contraseña incorrecta</string>

    <string name="confirmacion">Confirmacion</string>
    <string name="hay_errores">Debe corregir los errores para continuar</string>
    <string name="si">SI</string>
    <string name="no">NO</string>

    <string name="validacion_requerido">Requerido</string>
    <string name="validacion_email">Email no valido</string>
    <string name="validacion_numerico">Numerico</string>
    <string name="validacion_decimal">Decimal</string>
    <string name="validacion_largo_minimo">Largo minimo</string>
    <string name="validacion_caracteres">caracteres</string>

    <string-array name="pref_idioma_list_titles">
        <item>Español</item>
        <item>Ingles</item>
    </string-array>
    <string-array name="pref_idioma_list_values">
        <item>es</item>
        <item>en</item>
    </string-array>

</resources>
